--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,27 @@
 name: IVM
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
   - blas=1.0=mkl
   - bottleneck=1.3.2=py39hdd57654_1
-  - ca-certificates=2021.7.5=h06a4308_1
-  - certifi=2021.5.30=py39h06a4308_0
+  - ca-certificates=2021.5.30=ha878542_0
+  - certifi=2021.5.30=py39hf3d152e_0
+  - et_xmlfile=1.1.0=py39h06a4308_0
   - intel-openmp=2021.3.0=h06a4308_3350
+  - jdcal=1.4.1=py_0
+  - joblib=1.0.1=pyhd8ed1ab_0
   - ld_impl_linux-64=2.35.1=h7274673_9
+  - libblas=3.9.0=10_mkl
+  - libcblas=3.9.0=10_mkl
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.3.0=h5101ec6_17
+  - libgfortran-ng=11.1.0=h69a702a_8
+  - libgfortran5=11.1.0=h6c583b3_8
   - libgomp=9.3.0=h5101ec6_17
+  - liblapack=3.9.0=10_mkl
   - libstdcxx-ng=9.3.0=hd4cf53a_17
   - mkl=2021.3.0=h06a4308_520
   - mkl-service=2.4.0=py39h7f8727e_0
@@ -22,16 +31,21 @@ dependencies:
   - numexpr=2.7.3=py39h22e1b3c_1
   - numpy=1.20.3=py39hf144106_0
   - numpy-base=1.20.3=py39h74d4b33_0
-  - openssl=1.1.1k=h27cfd23_0
+  - openpyxl=3.0.7=pyhd3eb1b0_0
+  - openssl=1.1.1k=h7f98852_0
   - pandas=1.3.1=py39h8c16a72_0
   - pip=21.2.2=py39h06a4308_0
   - python=3.9.6=h12debd9_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.9=2_cp39
   - pytz=2021.1=pyhd3eb1b0_0
   - readline=8.1=h27cfd23_0
+  - scikit-learn=0.24.2=py39h4dfa638_0
+  - scipy=1.6.3=py39hee8e79c_0
   - setuptools=52.0.0=py39h06a4308_0
   - six=1.16.0=pyhd3eb1b0_0
   - sqlite=3.36.0=hc218d9a_0
+  - threadpoolctl=2.2.0=pyh8a188c0_0
   - tk=8.6.10=hbc83047_0
   - tzdata=2021a=h52ac0ba_0
   - wheel=0.36.2=pyhd3eb1b0_0
